# romea-core-common

./: .gitlab-ci.yml  CMakeLists.txt  NOTICE  README.md  package.xml  romea_common.repos  romea_common_public.repos  romea_core_common.repos
cmake/: romea_commonConfig.cmake.in  romea_core_commonConfig.cmake.in
include/romea_common/concurrency/: SharedVariable.hpp
include/romea_common/containers/Eigen/: EigenContainers.hpp  RingOfEigenVector.hpp  VectorOfEigenVector.hpp
include/romea_common/containers/boundingbox/: OrientedBoundingBox.hpp
include/romea_common/containers/grid/: GridIndexMapping.hpp  (+1 more)
include/romea_common/coordinates/: CartesianCoordinates.hpp  PolarCoordinates.hpp
include/romea_common/diagnostic/: CheckupEqualTo.hpp  CheckupGreaterThan.hpp  CheckupLowerThan.hpp  CheckupRate.hpp  CheckupReliability.hpp  Diagnostic.hpp  DiagnosticCompareTo.hpp  DiagnosticEqualTo.hpp  DiagnosticGreaterThan.hpp  DiagnosticLowerThan.hpp  DiagnosticRate.hpp  DiagnosticReliability.hpp  DiagnosticReport.hpp  DiagnosticStatus.hpp
include/romea_common/geodesy/: EarthEllipsoid.hpp  GeodeticCoordinates.hpp  WGS84Coordinates.hpp
include/romea_common/geometry/: Ellipse.hpp  Pose3D.hpp  PoseAndTwist2D.hpp  Position2D.hpp  Twist3D.hpp
include/romea_common/lexical/: LexicalCast.hpp
include/romea_common/math/: Algorithm.hpp  EulerAngles.hpp  Interval.hpp  Matrix.hpp  NormalRandomMatrix.hpp  NormalRandomMatrixGenerator.hpp
include/romea_common/monitoring/: OnlineAverage.hpp  RateMonitoring.hpp
include/romea_common/pointset/: KdTree.hpp  NormalSet.hpp  PointTraits.hpp
include/romea_common/signal/: FirstOrderButterworth.hpp  Noise.hpp
include/romea_common/transform/: SmartRotation3D.hpp
include/romea_core_common/concurrency/: SharedOptionalVariable.hpp  SharedVariable.hpp
include/romea_core_common/control/: PID.hpp
include/romea_core_common/coordinates/: CartesianCoordinates.hpp  HomogeneousCoordinates.hpp  PolarCoordinates.hpp  SphericalCoordinates.hpp
include/romea_core_common/diagnostic/: Checkup.hpp  CheckupCompareWith.hpp  CheckupEqualTo.hpp  CheckupGreaterThan.hpp  CheckupLowerThan.hpp  CheckupRate.hpp  CheckupReliability.hpp  Diagnostic.hpp  DiagnosticReport.hpp  DiagnosticStatus.hpp
include/romea_core_common/geodesy/: ECEFConverter.hpp  ENUConverter.hpp  EarthEllipsoid.hpp  GeodeticCoordinates.hpp  LambertConverter.hpp  WGS84Coordinates.hpp
include/romea_core_common/geometry/: Circle.hpp  Ellipse.hpp  Pose2D.hpp  Pose3D.hpp  PoseAndTwist2D.hpp  PoseAndTwist3D.hpp  Position2D.hpp  Position3D.hpp  Twist2D.hpp  Twist3D.hpp
include/romea_core_common/lexical/: LexicalCast.hpp
include/romea_core_common/log/: SimpleFileLogger.hpp
include/romea_core_common/math/: Algorithm.hpp  EulerAngles.hpp  Interval.hpp  Matrix.hpp  NormalRandomMatrix.hpp  NormalRandomMatrixGenerator.hpp  Transformation.hpp
include/romea_core_common/monitoring/: OnlineAverage.hpp  OnlineVariance.hpp  RateMonitoring.hpp
include/romea_core_common/pointset/: KdTree.hpp  NormalSet.hpp  PointSet.hpp  PointTraits.hpp
include/romea_core_common/signal/: FirstOrderButterworth.hpp  Noise.hpp
include/romea_core_common/time/: Time.hpp  Timer.hpp
include/romea_core_common/transform/: SmartRotation3D.hpp
src/containers/boundingbox/: AxisAlignedBoundingBox.cpp  OrientedBoundingBox.cpp
src/containers/grid/: GridIndexMapping.cpp  RayTracing.cpp
src/control/: PID.cpp
src/diagnostics/: CheckupRate.cpp  CheckupReliability.cpp  Diagnostic.cpp  DiagnosticRate.cpp  DiagnosticRate.cpp.autosave  DiagnosticReliability.cpp  DiagnosticReliability.cpp.autosave  DiagnosticReport.cpp  DiagnosticStatus.cpp
src/geodesy/: ECEFConverter.cpp  ENUConverter.cpp  EarthEllipsoid.cpp  GeodeticCoordinates.cpp  LambertConverter.cpp  WGS84Coordinates.cpp
src/geometry/: Circle.cpp  Ellipse.cpp  Pose2D.cpp  Pose3D.cpp  PoseAndTwist2D.cpp  PoseAndTwist3D.cpp  Position2D.cpp  Position3D.cpp  Twist2D.cpp  Twist3D.cpp
src/monitoring/: OnlineAverage.cpp  OnlineVariance.cpp  RateMonitoring.cpp
src/pointset/: KdTree.cpp
src/pointset/algorithms/: Correspondence.cpp  NormalAndCurvatureEstimation.cpp  PointSetPreconditioner.cpp  PreconditionedPointSet.cpp
src/regression/leastsquares/: LeastSquares.cpp  MEstimator.cpp  NLSE.cpp
src/regression/ransac/: Ransac.cpp  RansacIterations.cpp  RansacModel.cpp  RansacRandomCorrespondences.cpp
src/signal/: FirstOrderButterworth.cpp  Noise.cpp
src/time/: Timer.cpp
src/transform/: SmartRotation3D.cpp
src/transform/estimation/: FindRigidTransformationByICP.cpp  FindRigidTransformationByLeastSquares.cpp  FindRigidTransformationBySVD.cpp  RansacRigidTransformationModel.cpp
test/: CMakeLists.txt  test_containers_bb.cpp  test_containers_grid.cpp  test_coordinates.cpp  test_diagnostic.cpp  test_geodesy.cpp  test_lexical_cast.cpp  test_math_algorithm.cpp  test_math_euler.cpp  test_math_matrix.cpp  test_monitoring.cpp  test_pointset.cpp  test_pointset_utils.hpp  test_time.cpp  test_transform.cpp
test/containers/: CMakeLists.txt  test_bounding_box.cpp  test_grid.cpp  test_ray_tracing.cpp
test/data/: normals2d.txt  normals3d.txt  scan2d.txt  scan3d.txt
test/diagnostics/: CMakeLists.txt  test_checkup_equal_to.cpp  test_checkup_equal_to_rate.cpp  test_checkup_greater_than.cpp  test_checkup_greater_than_rate.cpp  test_checkup_lower_than.cpp  test_checkup_reliability.cpp  test_diagnostic_report.cpp  test_diagnostic_status.cpp
test/geodesy/: CMakeLists.txt  test_ecef_converter.cpp  test_enu_converter.cpp  test_lambert_converter.cpp
test/geometry/: CMakeLists.txt  test_geometry_pose2d.cpp  test_geometry_pose3d.cpp  test_geometry_utils.hpp
test/math/: CMakeLists.txt  test_math_algorithm.cpp  test_math_euler.cpp  test_math_interval.cpp  test_math_matrix.cpp  test_transformation.cpp
test/monitoring/: CMakeLists.txt  test_online_statistics.cpp  test_rate_monitoring.cpp
test/pointset/: CMakeLists.txt  test_compute_normals.cpp  test_find_correspondences.cpp  test_pointset_utils.hpp
test/transform/: CMakeLists.txt  test_smart_rotation.cpp  test_transform.cpp
(+39 files in other folders)
